deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopify-app
  labels:
    app: shopify-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopify-app
  template:
    metadata:
      labels:
        app: shopify-app
    spec:
      imagePullSecrets:
        - name: regcred2
      containers:
      - name: shopify-app
        image: registry.myella.app/kodex:8  # Replace with your image name
        ports:
        - containerPort: 8081
