ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: kodex-service
spec:
  selector:
    app: shopify-app
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kodex-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "4000m"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # Add configuration to properly handle Shopify app bridge
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Forwarded-Proto $scheme;
      proxy_set_header X-Forwarded-Host $host;
      proxy_set_header X-Real-IP $remote_addr;
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - kodex.ruraldevs.dev
    secretName: kodex-production-tls
  rules:
  - host: kodex.ruraldevs.dev
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kodex-service
              port:
                number: 8081
  ingressClassName: nginx
